--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-md-8 mx-auto text-center">
                 <img src="assets/img/logo-3d.jpg" class="d-block mx-auto mb-4" width="200" data-cursor="-sm" data-magnetic data-cursor="-opaque" alt="Logo"/>
                 <h1 class="pb-2">Discover a new way of learning programming</h1>
-                <p class="lead mb-4">ProgLearn is a eLearning platform that helps you <br> learn web development and get skills.</p>
+                <p class="lead mb-4">ProgLearn is a eLearning platform that helps you learn web development and get skills.</p>
 
                 <div class="d-flex flex-column col-md-6 col-lg-6 align-items-md-stretch mx-auto justify-content-md-center gap-3">
                     <a href="" class="btn pl-btn btn-primary d-inline-block v-align-middle" data-bs-toggle="modal" data-bs-target="#downloadModal">
