--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
                     <li class="nav-item load-hidden me-4 widget">
                         <a class="linkText" href="#teams">
-                            Our Teams
+                            Our Team
                         </a>
                     </li>
                     <li class="nav-item load-hidden widget">
@@ -85,15 +85,15 @@
     </div>
 
     <div class="container-xxl mb-5 pb-5 text-center">
-        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img pe-none" alt="UI Elements" /><br />
-        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img pe-none" alt="UI Elements" />
+        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" /><br />
+        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" />
     </div>
 
     <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
         <div class="container p-lg-5 mx-auto my-5">
             <div class="text-center">
                 <h2 class="display-5 pl-title">Why use <span class="proglearn-text">ProgLearn?</span></h2>
-                <p class="lead">See why ProgLearn is the best choice for your next app to download.</p>
+                <p class="lead">See why ProgLearn is the best app for your next download</p>
             </div>
             <div class="row mt-3 pt-3 p-3">
                 <div class="col-lg-4 col-md-6 mb-3 mb-md-3 mb-lg-0" data-cursor-text="Lessons">
@@ -143,7 +143,7 @@
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
             <div class="row center-hero flex-lg-row-reverse flex-md-row-reverse">
                 <div class="col-md-5 p-lg-7 mx-auto my-5">
-                    <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Interactive. Fast. Ease.</h1>
+                    <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Interactive. Fast. Easy.</h1>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <img src="assets/img/ss4.png" class="d-block mx-lg-auto img-fluid pe-none" width="700" alt="">
@@ -171,7 +171,7 @@
     <div class="container-xxl mb-5 pb-5" id="teams" style="padding-top: 60px;">
         <div class="col-lg-7 mx-auto text-center">
             <div>
-                <h2 class="display-5 pl-title pb-4">Meet Our Teams</h2>
+                <h2 class="display-5 pl-title pb-4">Meet Our Team</h2>
                 <a href="team.html" data-cursor-text="View">
                     <img src="assets/img/dev.gif" class="img-fluid" alt="teams" />
                 </a>
