--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="shortcut icon" href="assets/img/logo.png" />
     <link rel="stylesheet" href="assets/css/csr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 
 </head>
 <body>
@@ -70,7 +69,12 @@
         <div class="container-xxl">
             <div class="col-md-8 mx-auto text-center">
                 <img src="assets/img/logo-3d.jpg" class="d-block mx-auto mb-4" width="200" data-cursor="-sm" data-magnetic data-cursor="-opaque" alt="Logo"/>
-                <h1 class="pb-2">Discover a new way of learning programming</h1>
+                <h1 class="pb-2" data-cursor="-opaque" data-cursor="-lg">
+                    <span id="heroh1">
+                        
+                    </span>
+                    a new way of learning programming
+                </h1>
                 <p class="lead mb-4">ProgLearn is a eLearning platform that helps you learn web development and get skills.</p>
 
                 <div class="d-flex flex-column col-md-6 col-lg-6 align-items-md-stretch mx-auto justify-content-md-center gap-3">
@@ -85,8 +89,8 @@
     </div>
 
     <div class="container-xxl mb-5 pb-5 text-center">
-        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" /><br />
-        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" />
+        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/><br />
+        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/>
     </div>
 
     <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
@@ -146,7 +150,7 @@
                     <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Interactive. Fast. Easy.</h1>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <img src="assets/img/ss4.png" class="d-block mx-lg-auto img-fluid pe-none" width="700" alt="">
+                    <img src="assets/img/ss4.png" class="d-block mx-lg-auto img-fluid element-ui-img" width="700" alt="" oncontextmenu="return false;">
                 </div>
             </div>
         </div>
@@ -159,7 +163,7 @@
                     <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Pro, Simple, and Modern Design</h1>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <img src="assets/img/ss3.png" class="img-fluid pe-none" width="700" alt="">
+                    <img src="assets/img/ss3.png" class="img-fluid element-ui-img" width="700" alt="" oncontextmenu="return false;">
                 </div>
             </div>
         </div>
@@ -246,7 +250,8 @@
 </div>
 
 
-
+<script src="assets/js/typeit.min.js"></script>
+<script>new TypeIt("#heroh1",{lifeLike:!1,speed:0,afterComplete:function(e){e.destroy()}}).delete(4,{instant:!0}).type("E").pause(344).type("x").pause(160).type("p").pause(152).type("l").pause(176).type("o").pause(104).type("r").pause(48).type("e").pause(1496).delete(1).pause(96).delete(1).pause(88).delete(1).pause(64).delete(1).pause(80).delete(1).pause(80).delete(1).pause(64).delete(1).pause(472).type("D").pause(200).type("i").pause(144).type("s").pause(250).type("c").pause(126).type("o").pause(312).type("v").pause(136).type("e").pause(72).type("r").go();</script>
 <script src="assets/js/csr_bundle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
