--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>ProgLearn</title>
+    <meta property='og:title'  content="ProgLearn">
+    <meta name='twitter:title' content="ProgLearn">
 
     <meta name="description" content="ProgLearn is a application for learning programming.">
+    <meta property="og:image"  content="assets/img/meta_image.png">
+    <meta name="twitter:image" content="assets/img/meta_image.png">
+    
     <link rel="shortcut icon" href="assets/img/logo.png" />
     <link rel="stylesheet" href="assets/css/csr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
