--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <div class="container-xxl mb-5 pb-5 text-center">
+    <div class="container mb-5 pb-5 text-center">
         <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/><br />
         <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/>
     </div>
