Added lazy loading

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-default navbar-expand-lg " style="padding: 20px 1rem 20px 1rem;">
         <div class="container">
-            <a class="navbar-brand load-hidden widget" href="/"><img src="assets/img/logo.svg" width="40" /></a>
+            <a class="navbar-brand load-hidden widget" href="/"><img src="assets/img/logo.svg" loading="lazy" width="40" /></a>
 
             <div class="mobileonly-items" style="display: flex;">
                 <div class="load-hidden widget">
@@ -73,7 +73,7 @@
     <div class="hero mt-2">
         <div class="container-xxl">
             <div class="col-md-8 mx-auto text-center">
-                <img src="assets/img/logo-3d.jpg" class="d-block mx-auto mb-4" width="200" data-cursor="-sm" data-magnetic data-cursor="-opaque" alt="Logo"/>
+                <img src="assets/img/logo-3d.jpg" class="d-block mx-auto mb-4" width="200" data-cursor="-sm" loading="lazy" data-magnetic data-cursor="-opaque" alt="Logo"/>
                 <h1 class="pb-2" data-cursor="-opaque" data-cursor="-lg">
                     <span id="heroh1">
                         
@@ -84,7 +84,7 @@
 
                 <div class="d-flex flex-column col-md-6 col-lg-6 align-items-md-stretch mx-auto justify-content-md-center gap-3">
                     <a href="" class="btn pl-btn btn-primary d-inline-block v-align-middle" data-bs-toggle="modal" data-bs-target="#downloadModal">
-                        <img src="assets/img/download.svg" class="me-1 bi text-white" alt="" />
+                        <img src="assets/img/download.svg" class="me-1 bi text-white" alt="" loading="lazy"/>
                         Download
                     </a>
                 </div>
@@ -94,8 +94,8 @@
     </div>
 
     <div class="container mb-5 pb-5 text-center">
-        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/><br />
-        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" oncontextmenu="return false;"/>
+        <img src="assets/img/uiElement-d.png" class="img-fluid desktop-img element-ui-img" alt="UI Elements" loading="lazy" oncontextmenu="return false;"/><br />
+        <img src="assets/img/ss2.png" class="img-fluid mobile-img element-ui-img" alt="UI Elements" loading="lazy" oncontextmenu="return false;"/>
     </div>
 
     <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
@@ -108,7 +108,7 @@
                 <div class="col-lg-4 col-md-6 mb-3 mb-md-3 mb-lg-0" data-cursor-text="Lessons">
                     <div class="text-center">
                         <div class="icon" >
-                            <img src="assets/img/flaticon/1.png" class="pe-none" width="120" alt="">
+                            <img src="assets/img/flaticon/1.png" class="pe-none" width="120" loading="lazy" alt="">
                         </div>
                         <div class="content">
                             <h3>3 Lessons</h3>
@@ -121,7 +121,7 @@
                 <div class="col-lg-4 col-md-6 mb-3 mb-md-3 mb-lg-0" data-cursor-text="Quizzes">
                     <div class="text-center">
                         <div class="icon">
-                            <img src="assets/img/flaticon/2.png" class="pe-none" width="120" alt="">
+                            <img src="assets/img/flaticon/2.png" class="pe-none" width="120" loading="lazy" alt="">
                         </div>
                         <div class="content">
                             <h3>Quizzes</h3>
@@ -134,7 +134,7 @@
                 <div class="col-lg-4 col-md-12 mb-md-0 mb-lg-0" data-cursor-text="Fast">
                     <div class="text-center">
                         <div class="icon">
-                            <img src="assets/img/flaticon/3.png" class="pe-none" width="120" alt="">
+                            <img src="assets/img/flaticon/3.png" class="pe-none" width="120" loading="lazy" alt="">
                         </div>
                         <div class="content">
                             <h3>Fast Learning</h3>
@@ -155,7 +155,7 @@
                     <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Interactive. Fast. Easy.</h1>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <img src="assets/img/ss4.png" class="d-block mx-lg-auto img-fluid element-ui-img" width="700" alt="" oncontextmenu="return false;">
+                    <img src="assets/img/ss4.png" class="d-block mx-lg-auto img-fluid element-ui-img" width="700" alt="" loading="lazy" oncontextmenu="return false;">
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                     <h1 class="typography-section-headline" data-cursor="-opaque" data-cursor="-lg">Pro, Simple, and Modern Design</h1>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <img src="assets/img/ss3.png" class="img-fluid element-ui-img" width="700" alt="" oncontextmenu="return false;">
+                    <img src="assets/img/ss3.png" class="img-fluid element-ui-img" width="700" alt="" loading="lazy" oncontextmenu="return false;">
                 </div>
             </div>
         </div>
@@ -182,7 +182,7 @@
             <div>
                 <h2 class="display-5 pl-title pb-4">Meet Our Team</h2>
                 <a href="team.html" data-cursor-text="View">
-                    <img src="assets/img/dev.gif" class="img-fluid" alt="teams" />
+                    <img src="assets/img/dev.gif" class="img-fluid" alt="teams" loading="lazy"/>
                 </a>
                 <!-- <a href="team.html" data-cursor-text="View">
                     <img src="assets/img/developers-m.png" class="img-fluid mobile-img p-2 pe-none" data-cursor-text="View" alt="teams">
@@ -194,7 +194,7 @@
     <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img src="assets/img/logo.svg" class="pe-none" width="30" height="30" alt="" />
+                <img src="assets/img/logo.svg" class="pe-none" width="30" height="30" alt="" loading="lazy"/>
             </a>
             <span class="mb-md-0 text-muted">&copy; 2022 Intelliware</span>
         </div>
@@ -228,7 +228,7 @@
         <div class="modal-content" style="background: #eef1f6; padding: 29px; border-radius: 33px;">
             <div class="modal-body">
                 <div class="pb-3">
-                    <img src="assets/img/logo.svg" />
+                    <img src="assets/img/logo.svg" loading="lazy"/>
                     <button type="button" class="btn-close btn-remove-outline float-end close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="content mx-auto">
