--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>ProgLearn</title>
+    <title>Welcome to ProgLearn</title>
     <meta property='og:title'  content="ProgLearn">
     <meta name='twitter:title' content="ProgLearn">
 
