--- a/team.html
+++ b/team.html
@@ -60,12 +60,12 @@
     </nav>
 </header><br><br>
 
-<main class="main">
+<main class="main pb-5">
     <div class="container-xxl">
         <h2 class="display-5 pl-title pb-4 text-center">Intelliware Teams</h2>
-        <div class="row g-2" data-masonry='{"percentPosition": true }'>
+        <div class="row g-2">
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <div class="team-ceo center-block mx-auto"></div>
                         <!-- <img src="/assets/team/elwyn.png" class="center-block rounded-circle has-ring" width="100" alt=""> -->
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/beronica.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/blanco.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/alyssa.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/brioso.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/padua.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/ibarolla.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/ken.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/von.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/sison.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3">
-                <div class="card card-team p-2">                
+                <div class="card card-team p-2 h-100">                
                     <div class="card-body text-center">
                         <img src="assets/img/team/dave.png" class="center-block rounded-circle" width="100" alt="">
                         <h2 class=" mt-3 fw-bold">
