Update lead description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </span>
                     a new way of learning programming
                 </h1>
-                <p class="lead mb-4">ProgLearn is a eLearning platform that helps you learn web development and get skills.</p>
+                <p class="lead mb-4">ProgLearn is an eLearning platform that helps you learn web development and gain skills..</p>
 
                 <div class="d-flex flex-column col-md-6 col-lg-6 align-items-md-stretch mx-auto justify-content-md-center gap-3">
                     <a href="" class="btn pl-btn btn-primary d-inline-block v-align-middle" data-bs-toggle="modal" data-bs-target="#downloadModal">
