--- a/team.html
+++ b/team.html
@@ -41,8 +41,8 @@
                         </a>
                     </li>
                     <li class="nav-item load-hidden widget">
-                        <a class="linkText" href="">
-                            About
+                        <a class="linkText" href="watch.html">
+                            Watch Videos
                         </a>
                     </li>
                 </ul>
