--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
                             Chief Executive Officer
                         </p>
                         <small class="fw-normal">
-                            App Developer, Web Developer and UI/UX Designer. 
+                            App Developer, Web Developer, UI/UX Designer, Product Designer
                         </small>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                             Chief Operating Officer
                         </p>
                         <small class="fw-normal">
-                            Researcher, Bug Hunter
+                            Researcher, Bug Hunter, Product Designer
                         </small>
                     </div>
                 </div>
