--- a/watch.html
+++ b/watch.html
@@ -74,7 +74,7 @@
     <section class="container py-5" id="watch">
         <div class="text-center">
             <img src="assets/img/expo_soon.png" class="img-fluid" style="border-radius: 32px;" alt="">
-            <p class="m-2 text-black-50">Edited by @elwynynion</p>
+            <p class="m-2 text-black-50">Edited by @elwynynion & @stephenvon</p>
         </div>
     </section>
 
