--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
                             Chief Operating Officer
                         </p>
                         <small class="fw-normal">
-                            Researcher, Bug Hunter
+                            Product Designer, Researcher, Bug Hunter
                         </small>
                     </div>
                 </div>
