--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Teams</title>
+    <title>Intelliware Team</title>
 
     <meta name="description" content="ProgLearn is a application for learning programming.">
     <link rel="shortcut icon" href="assets/img/logo.png" />
@@ -62,7 +62,7 @@
 
 <main class="main pb-5">
     <div class="container-xxl">
-        <h2 class="display-5 pl-title pb-4 text-center">Intelliware Teams</h2>
+        <h2 class="display-5 pl-title pb-4 text-center">Intelliware Team</h2>
         <div class="row g-2">
             <div class="col-sm-12 col-md-4 col-lg-3">
                 <div class="card card-team p-2 h-100">                
